Fixes the gaps on full-width blocks

--- a/src/block/icon/editor.scss
+++ b/src/block/icon/editor.scss
@@ -5,8 +5,3 @@
  */
 
 @import "common";
-
-// Fix inconsistent column-margin in WP5.5
-.ugb-icon__content-wrapper {
-	grid-gap: normal !important;
-}
